<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fahed.developer.nigthevents.activities.settings.SettingsActivity">
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="101"
        android:title="@string/sms_menu_detail_fragment"
        android:icon="@drawable/ic_sms"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share_menu_detail_fragment"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_email"
        android:orderInCategory="99"
        android:title="@string/email_menu_detail_fragment"
        android:icon="@drawable/ic_gmail"
        app:showAsAction="ifRoom"/>
</menu>